# Liquid-Duck-Software-Challenge

./: .coverage  .gitignore  CICD Document.docx  CICD_DOCUMENT.md  Complete_Execution_Guide.md  DESIGN_DOCUMENT.md  Design Document.docx  DuckDBManager.py  README.md  dump.rdb  mainapi.py  pyproject.toml  redislistener.py  sales_metrics.duckdb  server_log.txt  start_server.py  ~$CD Document.docx  ~$mplete Execution Guide.docx  ~$sign Document.docx  ~WRL2719.tmp
.github/ISSUE_TEMPLATE/: architecture-flowchart.md  data-flow.md  design-document.md  overview.md  problem-statement.md  step-by-step-process-.md  test-cases-.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Challenge/: DuckDBManager.py  LICENSE.md  data.py  logger.py  mainapi.py  redislistener.py
Docs/: Complete Execution Guide.docx  Complete_Execution_Guide.md  changelog.md  cicd_document.md  complete_execution_guide.md  design_document.md
poetry_dependency/: pyproject.toml
postman/: Liquid Duck Challenge.postman_collection.json  README.md
tests/: pytest.init  test_duckdbmanager.py  test_mainapi.py  test_redis.py
