[tool.poetry]
name = "liquid duck challenge"
version = "0.1.0"
description = "To create an architecture for a shared spreadsheet engine that supports real-time multi-user updates."
authors = ["srujani <vattikondasrujani@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
redis = "^5.2.0"
Faker = "^33.0.0"
duckdb = "^1.1.3"
pandas = "^2.2.3"
asyncio = "^3.4.3"
pyarrow = "^14.0.1"
adbc-driver-manager = "^1.3.0"
httpx = "^0.28.0"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.8.0"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pandas = "^2.2.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
